# docs/swagger.json
@@ -17,7 +17,7 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
-        "/api/v1/auth/login": {
+        "/auth/login": {
             "post": {
                 "description": "Authenticate user with email and password",
                 "consumes": [
@@ -69,7 +69,7 @@
                 }
             }
         },
-        "/api/v1/auth/logout": {
+        "/auth/logout": {
             "post": {
                 "security": [
                     {
@@ -118,7 +118,7 @@
                 }
             }
         },
-        "/api/v1/auth/me": {
+        "/auth/me": {
             "get": {
                 "security": [
                     {
@@ -158,14 +158,14 @@
                 }
             }
         },
-        "/api/v1/pages": {
+        "/pages": {
             "get": {
                 "security": [
                     {
                         "Bearer": []
                     }
                 ],
-                "description": "Get list of all pages, optionally filtered by website_id",
+                "description": "Get list of all pages, optionally filtered by websiteId",
                 "consumes": [
                     "application/json"
                 ],
@@ -180,7 +180,7 @@
                     {
                         "type": "integer",
                         "description": "Filter by website ID",
-                        "name": "website_id",
+                        "name": "websiteId",
                         "in": "query"
                     }
                 ],
@@ -198,7 +198,7 @@
                         }
                     },
                     "400": {
-                        "description": "Invalid website_id parameter",
+                        "description": "Invalid websiteId parameter",
                         "schema": {
                             "type": "object",
                             "additionalProperties": {
@@ -267,7 +267,7 @@
                 }
             }
         },
-        "/api/v1/pages/slug/{slug}": {
+        "/pages/slug/{slug}": {
             "get": {
                 "security": [
                     {
@@ -316,7 +316,7 @@
                 }
             }
         },
-        "/api/v1/pages/{id}": {
+        "/pages/{id}": {
             "get": {
                 "security": [
                     {
@@ -495,7 +495,7 @@
                 }
             }
         },
-        "/api/v1/users": {
+        "/users": {
             "get": {
                 "security": [
                     {
@@ -587,7 +587,7 @@
                 }
             }
         },
-        "/api/v1/users/{id}": {
+        "/users/{id}": {
             "get": {
                 "security": [
                     {
@@ -766,7 +766,7 @@
                 }
             }
         },
-        "/api/v1/websites": {
+        "/websites": {
             "get": {
                 "security": [
                     {
@@ -858,7 +858,7 @@
                 }
             }
         },
-        "/api/v1/websites/slug/{slug}": {
+        "/websites/slug/{slug}": {
             "get": {
                 "security": [
                     {
@@ -907,7 +907,7 @@
                 }
             }
         },
-        "/api/v1/websites/{id}": {
+        "/websites/{id}": {
             "get": {
                 "security": [
                     {
@@ -1092,23 +1092,23 @@
             "type": "object",
             "required": [
                 "description",
-                "markdown_content",
+                "markdownContent",
                 "slug",
                 "status",
                 "title",
-                "website_id"
+                "websiteId"
             ],
             "properties": {
                 "description": {
                     "type": "string"
                 },
-                "freeze_status": {
+                "freezeStatus": {
                     "type": "boolean"
                 },
-                "markdown_content": {
+                "markdownContent": {
                     "type": "string"
                 },
-                "scheduled_publish_at": {
+                "scheduledPublishAt": {
                     "type": "string"
                 },
                 "slug": {
@@ -1130,7 +1130,7 @@
                 "title": {
                     "type": "string"
                 },
-                "website_id": {
+                "websiteId": {
                     "type": "integer"
                 }
             }
@@ -1161,11 +1161,11 @@
                 "config",
                 "description",
                 "domain",
-                "git_api_token",
-                "git_repo_branch",
-                "git_repo_name",
-                "git_repo_owner",
-                "language_code",
+                "gitApiToken",
+                "gitRepoBranch",
+                "gitRepoName",
+                "gitRepoOwner",
+                "languageCode",
                 "name",
                 "slogan",
                 "slug"
@@ -1180,19 +1180,19 @@
                 "domain": {
                     "type": "string"
                 },
-                "git_api_token": {
+                "gitApiToken": {
                     "type": "string"
                 },
-                "git_repo_branch": {
+                "gitRepoBranch": {
                     "type": "string"
                 },
-                "git_repo_name": {
+                "gitRepoName": {
                     "type": "string"
                 },
-                "git_repo_owner": {
+                "gitRepoOwner": {
                     "type": "string"
                 },
-                "language_code": {
+                "languageCode": {
                     "type": "string"
                 },
                 "name": {
@@ -1224,7 +1224,7 @@
         "models.LoginResponse": {
             "type": "object",
             "properties": {
-                "session_token": {
+                "sessionToken": {
                     "type": "string"
                 },
                 "user": {
@@ -1235,25 +1235,25 @@
         "models.Page": {
             "type": "object",
             "properties": {
-                "created_at": {
+                "createdAt": {
                     "type": "string"
                 },
                 "description": {
                     "type": "string"
                 },
-                "freeze_status": {
+                "freezeStatus": {
                     "type": "boolean"
                 },
                 "id": {
                     "type": "integer"
                 },
-                "last_status_change_at": {
+                "lastStatusChangeAt": {
                     "type": "string"
                 },
-                "markdown_content": {
+                "markdownContent": {
                     "type": "string"
                 },
-                "scheduled_publish_at": {
+                "scheduledPublishAt": {
                     "type": "string"
                 },
                 "slug": {
@@ -1268,10 +1268,10 @@
                 "title": {
                     "type": "string"
                 },
-                "updated_at": {
+                "updatedAt": {
                     "type": "string"
                 },
-                "website_id": {
+                "websiteId": {
                     "type": "integer"
                 }
             }
@@ -1282,13 +1282,13 @@
                 "description": {
                     "type": "string"
                 },
-                "freeze_status": {
+                "freezeStatus": {
                     "type": "boolean"
                 },
-                "markdown_content": {
+                "markdownContent": {
                     "type": "string"
                 },
-                "scheduled_publish_at": {
+                "scheduledPublishAt": {
                     "type": "string"
                 },
                 "slug": {
@@ -1335,19 +1335,19 @@
                 "domain": {
                     "type": "string"
                 },
-                "git_api_token": {
+                "gitApiToken": {
                     "type": "string"
                 },
-                "git_repo_branch": {
+                "gitRepoBranch": {
                     "type": "string"
                 },
-                "git_repo_name": {
+                "gitRepoName": {
                     "type": "string"
                 },
-                "git_repo_owner": {
+                "gitRepoOwner": {
                     "type": "string"
                 },
-                "language_code": {
+                "languageCode": {
                     "type": "string"
                 },
                 "name": {
@@ -1364,7 +1364,7 @@
         "models.User": {
             "type": "object",
             "properties": {
-                "created_at": {
+                "createdAt": {
                     "type": "string"
                 },
                 "email": {
@@ -1376,7 +1376,7 @@
                 "name": {
                     "type": "string"
                 },
-                "updated_at": {
+                "updatedAt": {
                     "type": "string"
                 }
             }
@@ -1387,7 +1387,7 @@
                 "config": {
                     "type": "string"
                 },
-                "created_at": {
+                "createdAt": {
                     "type": "string"
                 },
                 "description": {
@@ -1396,19 +1396,19 @@
                 "domain": {
                     "type": "string"
                 },
-                "git_repo_branch": {
+                "gitRepoBranch": {
                     "type": "string"
                 },
-                "git_repo_name": {
+                "gitRepoName": {
                     "type": "string"
                 },
-                "git_repo_owner": {
+                "gitRepoOwner": {
                     "type": "string"
                 },
                 "id": {
                     "type": "integer"
                 },
-                "language_code": {
+                "languageCode": {
                     "type": "string"
                 },
                 "name": {
@@ -1420,7 +1420,7 @@
                 "slug": {
                     "type": "string"
                 },
-                "updated_at": {
+                "updatedAt": {
                     "type": "string"
                 }
             }
